<resources>
    <string name="app_name">福位选号</string>
    <string name="hello_world">Hello SelectHappyLocation</string>
    <string name="action_settings">Settings</string>

    <string name="bar_title">标题</string>
    <string name="my_selection">我的选号</string>
    <string name="end_selection">结束选号</string>
    <string name="random_selection">随机选号</string>
    <string name="begin_selection">开始选号</string>
    <string name="sure">确定</string>

    <string name="addvance_book">高端定制</string>
    <string name="fuweiquyu">福位区域：%1$s</string>
    <string name="valid_time_remain">%1$d 小时 %2$s 分 %3$s 秒</string>
    <string name="end_count_down">倒计时结束</string>

    <string name="company_right_text">飘奇工作室 All @Right 2015</string>
    <string name="identity_card">身份证</string>
    <string name="identity_card_hint">请输入您的身份证号码</string>
    <string name="btn_login_text">登录</string>
    <string name="btn_confirm_login_text">确认登录</string>
    <string name="title_index_text">首页</string>
    <string name="title_location_scenery_text">长春古观</string>

    <string name="title_birthday_text">生辰八字</string>
    <string name="name_text">姓名</string>
    <string name="birthday_text">生日</string>
    <string name="birthday_detail_text">时辰</string>
    <string name="name_hint_text">请填写您的姓名</string>
    <string name="birthday_hint_text">请选择您的生日</string>
    <string name="birthday_detail_hint_text">请选择您的时辰</string>
    <string name="start_select_text">开始选号</string>
    <string name="confirm_select_number_text">确定选号</string>

    <string name="title_selection_detail_text">福位详情</string>
    <string name="title_my_selection_text">我的选号</string>

    <string name="title_advance_book_text">高端定制</string>
</resources>
