<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/bitmap_background"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/navigation_bar"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="*请准确填写姓名和生日时辰"
        android:textColor="@color/company_right"
        android:textSize="14sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:background="@color/cut_off_line"></View>
    <!-- 姓名 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@drawable/name_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>

        <View
            android:layout_width="0.6dp"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/cut_off_line"></View>

        <EditText
            android:id="@+id/edt_real_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/name_hint_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:background="@color/cut_off_line"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@drawable/birthday_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>

        <View
            android:layout_width="0.6dp"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/cut_off_line"></View>

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/birthday_hint_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:background="@color/cut_off_line"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@drawable/birthday_detail_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_detail_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>

        <View
            android:layout_width="0.6dp"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/cut_off_line"></View>

        <TextView
            android:id="@+id/tv_birthday_detail"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/birthday_detail_hint_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:background="@color/cut_off_line"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/btn_start_select"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_click_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/start_select_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>