<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/bitmap_background"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/navigation_bar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_logo"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:background="@color/cut_off_line"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/identity_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_card"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>

        <View
            android:layout_width="0.6dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/cut_off_line"></View>

        <EditText
            android:id="@+id/edt_identity_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/identity_card_hint"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:background="@color/cut_off_line"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_click_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/btn_confirm_login_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/my_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="我的选号"/>

    <Button
        android:id="@+id/random_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="随机选号"/>

</LinearLayout>